Add routes api for products & categories
